--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,21 @@
-# Avoid accidental upload of the Sketch and Figma design files
-#####################################################
-## Please do not remove lines 5 and 6 - thanks! 🙂 ##
-#####################################################
-*.sketch
-*.fig
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Avoid accidental XD upload if you convert the design file
-###############################################
-## Please do not remove line 12 - thanks! 🙂 ##
-###############################################
-*.xd
+# testing
+/coverage
 
-# Avoid your project being littered with annoying .DS_Store files!
+# production
+/build
+
+# misc
 .DS_Store
-.prettierignore
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
